--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
         © 1997–2022 ООО «Яндекс»
     </div>
 </footer>
-<script src="vendors/react-with-dom.js"></script>
+<!--<script src="vendors/react-with-dom.js"></script>-->
 <script src="scripts.js"></script>
 </body>
 </html>
