--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <!--<link rel="preload" as="font" href="assets/lato.woff2" type="font/woff2" crossorigin="anonymous">
     --><link rel="stylesheet" type="text/css" href="reset.css">
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="preload" as="image" href="assets/logo.svg">
+    <link rel="preload" as="image" href="assets/icon_list_m@1x.svg">
+    <link rel="preload" as="image" href="assets/cloud-drizzle.svg">
+    <link rel="preload" as="image" href="assets/icon_temperature.svg">
 </head>
 <body>
 
