--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             line-height: 1;
         }
     </style>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="styles.min.css">
 </head>
 <body>
 
@@ -368,6 +368,6 @@
     </div>
 </footer>
 <!--<script src="vendors/react-with-dom.js"></script>-->
-<script src="scripts.js"></script>
+<script src="scripts.min.js"></script>
 </body>
 </html>
