fix: restore style for ol, ul

--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
         body {
             line-height: 1;
         }
+
+        ol, ul {
+            list-style: none;
+        }
     </style>
     <link rel="stylesheet" type="text/css" href="styles.min.css">
 </head>
