fix: restore icon_scheduled in preloading

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="preload" as="image" href="assets/cloud-drizzle.svg">
     <link rel="preload" as="image" href="assets/icon_sun_2.svg">
     <link rel="preload" as="image" href="assets/icon_temperature_2.svg">
+    <link rel="preload" as="image" href="assets/icon_scheduled.svg">
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0">
