--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         }
     </style>
     <link rel="stylesheet" type="text/css" href="styles.min.css">
+    <script async src="scripts.min.js"></script>
 </head>
 <body>
 
@@ -368,6 +369,5 @@
     </div>
 </footer>
 <!--<script src="vendors/react-with-dom.js"></script>-->
-<script src="scripts.min.js"></script>
 </body>
 </html>
