fix: async -> defer

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         }
     </style>
     <link rel="stylesheet" type="text/css" href="styles.min.css">
-    <script async src="scripts.min.js"></script>
+    <script defer src="scripts.min.js"></script>
 </head>
 <body>
 
