--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html lang="ru">
 <head>
-    <link rel="preload" as="image" href="assets/logo.svg">
-    <link rel="preload" as="image" href="assets/cloud-drizzle.svg">
-    <link rel="preload" as="image" href="assets/icon_sun_2.svg">
-    <link rel="preload" as="image" href="assets/icon_temperature_2.svg">
-    <link rel="preload" as="image" href="assets/icon_scheduled.svg">
+<!--    <link rel="preload" as="image" href="assets/logo.svg">-->
+<!--    <link rel="preload" as="image" href="assets/cloud-drizzle.svg">-->
+<!--    <link rel="preload" as="image" href="assets/icon_sun_2.svg">-->
+<!--    <link rel="preload" as="image" href="assets/icon_temperature_2.svg">-->
+<!--    <link rel="preload" as="image" href="assets/icon_scheduled.svg">-->
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0">
